[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/DigitalDisco.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/ToucyBubble.theme" type="Theme" id=2]
[ext_resource path="res://UI/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/MenuPopup.gd" type="Script" id=4]
[ext_resource path="res://Fonts/DigitalDisco-Thin.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.113725, 0.0901961, 0.235294, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_color = Color( 0.113725, 0.0901961, 0.235294, 1 )
use_mipmaps = true
font_data = ExtResource( 5 )

[node name="MenuPopup" type="Popup"]
visible = true
margin_right = 260.0
margin_bottom = 300.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -32.0
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 196.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Menu"
align = 1

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
visible = false
margin_top = 70.0
margin_right = 196.0
margin_bottom = 94.0
text = "Your Score: 000"
align = 1

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 196.0
margin_bottom = 244.0
columns = 2

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="RestartLabel" type="Label" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Try Again!"
align = 1

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )

[node name="MenuLabel" type="Label" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 40.0
margin_right = 196.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "Main Menu"
align = 1

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )

[node name="OPtionsLabel" type="Label" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 76.0
margin_right = 196.0
margin_bottom = 100.0
size_flags_horizontal = 3
text = "Options"
align = 1

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )

[node name="QuitLabel" type="Label" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 112.0
margin_right = 196.0
margin_bottom = 136.0
size_flags_horizontal = 3
text = "Quit"
align = 1

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )

[node name="BackLabel" type="Label" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 148.0
margin_right = 196.0
margin_bottom = 172.0
size_flags_horizontal = 3
text = "Back"
align = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_top = 248.0
margin_right = 196.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
text = "Music: Run and Jump by Bart on
http://opengameart.org"
align = 1

[node name="HighScoreLabel" type="RichTextLabel" parent="Panel"]
visible = false
margin_top = -64.0
margin_right = 260.0
rect_min_size = Vector2( 260, 64 )
bbcode_enabled = true
bbcode_text = "[wave amp = 50 freq=2][center]NEW HIGHSCORE![/center][/wave]"
text = "NEW HIGHSCORE!"

[node name="OptionsMenu" parent="." instance=ExtResource( 3 )]

[connection signal="visibility_changed" from="." to="." method="_on_MenuPopup_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/BackButton" to="." method="_on_BackButton_pressed"]
